Unreleased

* Added support for Python 3.10/3.11 and Django 4.1.
* Dropped support for Python 3.6 and Django < 3.2.

1.9.1 (2022-03-23)

* Added `Linklist.filter_callable` optional hook to allow for more
  flexible link list filtering (Giuliano Mele).

1.9 (2021-12-23)

* Added support for Django 3.2 and 4.0 and removed support for Django < 2.2.
* Ignore raw `pre_save` signal (Timo Ludwig, #106).

1.8.1 (2021-04-01)

* The 1.8 release contained unwanted temporary stuff and was
  therefore a broken release. Many thanks to Stefan Borer for
  noticing that.

1.8 (2021-02-25)

* Added explicit `listeners.register_listeners` and
  `listeners.unregister_listeners` functions.
* Added `listeners.enable_listeners` and `listeners.disable_listeners` context
  managers.
* Avoid crash when looking for anchors in response content.
* Avoid possible failures when checking internal links depending on
  ALLOWED_HOSTS setting.
* Confirmed compatibility with Django 3.1.
* Dropped support for Python 3.4.

1.7 (2020-01-13)

* Dropped support for Python 2 and Django < 1.11.
* Added support for Django 3.0.
* Made more usage of the requests library.

1.6 (2019-03-20)

* Use requests library when getting 'certificate verify failed' errors.
* Fixed compatibility issues with newer versions of Django.
* Fixed pip installation issues with encoding errors (#87).

1.5 (2017-09-16)

* Added support for `tel:` links.
* For redirecting links, linkcheck now reports the status of the redirect
  target (#78).
* Dropped South migrations.
* 'Url.redirect_to' was migrated to a TextField to not limit its length (#75).
* Fixed handling of the '--limit' argument of the 'checklinks' command (#73).
* Fixed the task queue of links to check (#69).

1.4 (2017-01-13)

* Dropped support for Django 1.6 and Django 1.7, the minimal Python version is
  now Python 2.7. Django 1.10 is also supported.
* Listeners registration and post_delete signal are now happening in the app