@@ -1,5 +1,6 @@
 Unreleased
 
+* Verify SSL certificates (Timo Ludwig, #118)
 * Added support for Python 3.10/3.11 and Django 4.1.
 * Dropped support for Python 3.6 and Django < 3.2.
 
